--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width'>
 
 	<title>Lacewing - Text Mate 📱 😻 </title>
+    <meta name="description" content="Lacewing is simple minimal text message styling tool to spice-up your winter">
+    <meta name="author" content="Palash Bauri">
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
