pwa working test

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,36 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width'>
 
-	<title>Lacewing - Text Mate 📱 😻 </title>
-    <meta name="description" content="Lacewing is simple minimal text message styling tool to spice-up your winter">
+	<title>lwing - Text Mate 📱 😻 </title>
+    <meta name="description" content="Lwing is simple minimal text message styling tool to spice-up your winter">
     <meta name="author" content="Palash Bauri">
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=pglMNMnqnP">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=pglMNMnqnP">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=pglMNMnqnP">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=pglMNMnqnP" color="#5bbad5">
+    <link rel="shortcut icon" href="/favicon.ico?v=pglMNMnqnP">
+    <meta name="msapplication-TileColor" content="#00aba9">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@bauripalash">
+    <meta name="twitter:title" content="lwing - Text Mate 📱 😻">
+    <meta name="twitter:description" content="Lwing is simple minimal text message styling tool to spice-up your winter">
+    <meta name="twitter:creator" content="@bauripalash">
+    <meta name="twitter:url" content="https://stupefied-hamilton-257b1c.netlify.com/" />
+    <meta name="twitter:image:src" content="/cover.png">
+
+     <meta property="og:title" content="lwing - Text Mate 📱 😻" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://stupefied-hamilton-257b1c.netlify.com/" />
+    <meta property="og:image" content="/cover.png" />
+    <meta property="og:description" content="Lwing is simple minimal text message styling tool to spice-up your winter" />
+    <meta property="og:site_name" content="lwing - Text Mate 📱 😻" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="720" />
+
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/bundle.css'>
 
@@ -17,4 +42,12 @@
 
 <body>
 </body>
+<script>
+    if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js')
+            .then(function () {
+                console.log('Service Worker Registered');
+            });
+    }
+</script>
 </html>
