--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <meta property="og:site_name" content="lwing - Text Mate 📱 😻" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
+    <link rel="manifest" href="manifest.json">
 
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/bundle.css'>
