added about in modal

--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,12 @@
     <meta name="twitter:description" content="Lwing is simple minimal text message styling tool to spice-up your winter">
     <meta name="twitter:creator" content="@bauripalash">
     <meta name="twitter:url" content="https://stupefied-hamilton-257b1c.netlify.com/" />
-    <meta name="twitter:image:src" content="/cover.png">
+    <meta name="twitter:image:src" content="https://stupefied-hamilton-257b1c.netlify.com/cover.png">
 
      <meta property="og:title" content="lwing - Text Mate 📱 😻" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://stupefied-hamilton-257b1c.netlify.com/" />
-    <meta property="og:image" content="/cover.png" />
+    <meta property="og:image" content="https://stupefied-hamilton-257b1c.netlify.com/cover.png" />
     <meta property="og:description" content="Lwing is simple minimal text message styling tool to spice-up your winter" />
     <meta property="og:site_name" content="lwing - Text Mate 📱 😻" />
     <meta property="og:image:width" content="1280" />
@@ -43,12 +43,12 @@
 
 <body>
 </body>
-<script>
+<!-- <script>
     if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/sw.js')
             .then(function () {
                 console.log('Service Worker Registered');
             });
     }
-</script>
+</script> -->
 </html>
