--- a/public/index.html
+++ b/public/index.html
@@ -43,12 +43,12 @@
 
 <body>
 </body>
-<!-- <script>
+<script>
     if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/sw.js')
             .then(function () {
                 console.log('Service Worker Registered');
             });
     }
-</script> -->
+</script>
 </html>
