--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="shortcut icon" href="/favicon.ico?v=pglMNMnqnP">
     <meta name="msapplication-TileColor" content="#00aba9">
 
+
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@bauripalash">
     <meta name="twitter:title" content="lwing - Text Mate 📱 😻">
@@ -24,6 +25,8 @@
     <meta name="twitter:creator" content="@bauripalash">
     <meta name="twitter:url" content="https://stupefied-hamilton-257b1c.netlify.com/" />
     <meta name="twitter:image:src" content="https://stupefied-hamilton-257b1c.netlify.com/cover.png">
+
+    <meta name="theme-color" content="#070916" />
 
      <meta property="og:title" content="lwing - Text Mate 📱 😻" />
     <meta property="og:type" content="article" />
@@ -42,6 +45,8 @@
 </head>
 
 <body>
+<noscript>Please Enable JavaScript to Use lwing 😊</noscript>
+
 </body>
 <script>
     if ('serviceWorker' in navigator) {
