added cookie consent

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 	<script defer src='/bundle.js'></script>
 </head>
 
-<body>
+<body id="body">
 <noscript>Please Enable JavaScript to Use lwing 😊</noscript>
 
 </body>
@@ -56,4 +56,6 @@
              });
     }
 </script>
-</html>
+
+    
+ </html>
